fixed scrollbar issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,8 @@
 
 * {
   box-sizing: border-box;
+  overflow-y: auto;
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 html {
